--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@headlessui/react": "^1.6.6",
     "@heroicons/react": "^1.0.6",
     "classnames": "^2.3.1",
+    "html-react-parser": "^3.0.4",
     "next": "12.2.2",
     "react": "18.2.0",
     "react-dom": "18.2.0",
